user registered in org3

--- a/fabric-samples/test-network/.gitignore
+++ b/fabric-samples/test-network/.gitignore
@@ -8,6 +8,9 @@ organizations/fabric-ca/ordererOrg/*
 organizations/fabric-ca/org1/*
 organizations/fabric-ca/org2/*
 organizations/fabric-ca/org3/*
+!organizations/fabric-ca/org1/fabric-ca-server-config.yaml
+!organizations/fabric-ca/org2/fabric-ca-server-config.yaml
+!organizations/fabric-ca/org3/fabric-ca-server-config.yaml
 organizations/ordererOrganizations/*
 organizations/peerOrganizations/*
 system-genesis-block/*
